# inno_ansic_spring

./: .gitignore  CMakeLists.txt  README.md
assignments/ha-0/: README.md  ha-0.md
assignments/ha-0/template/: CMakeLists.txt  binarize.c  binarize.h  test_binarize.c
assignments/ha-1/: README.md
assignments/ha-1/template/src/: binarize.c  binarize.h  task.c  task.h
assignments/ha-1/template/tests/: CMakeLists.txt  test_binarize.c  test_task.c
assignments/ha-2/: CMakeLists.txt  priority_queue.c
assignments/ha-2/src/: priority_queue.c  stack.c
assignments/ha-2/tests/: CMakeLists.txt  test_queue.c  test_stack.c
assignments/ha-3/: CMakeLists.txt  bitMap.c  task3.c
assignments/ha-3/src/: bitMap.c  bitMap.h
assignments/ha-3/tests/: CMakeLists.txt  test_bitMap.c
assignments/ha-4/: README.md
assignments/ha-4/src/: vector.c  vector.h  vector_int.c  vector_int.h
assignments/ha-4/tests/: CMakeLists.txt  test_vector.c  test_vector_int.c  test_vector_qsort.c
final/preparation/: CMakeLists.txt  task0.c  task1.c  task2.c  task3.c
final/solutions/: CMakeLists.txt  task1.c  task1.h  task2.c  task3.c
grading/ha-1/: CMakeLists.txt
grading/ha-1/src/: task.c  task.h
grading/ha-1/tests/: test_task.c
grading/ha-1/to_test/1/src/: atofe.c  binarize.c  binsearch.c  detab.c  entab.c  escape.c  expand.c  flush.c  htoi.c  itob.c  strrindex.c  task.c  task.h
grading/ha-1/to_test/10/src/: binarize.c  task.c
grading/ha-1/to_test/11/src/: binarize.c  binarize.h  task.c  task.h
grading/ha-1/to_test/12/src/: task.c  task.h
grading/ha-1/to_test/13/src/: CMakeLists.txt  task.c  task.h
grading/ha-1/to_test/2/src/: binarize.c  binarize.h  task.c  task.h
grading/ha-1/to_test/3/src/: binarize.c  binarize.h  task.c  task.h
grading/ha-1/to_test/4/src/: binarize.c  task.c  task.h
grading/ha-1/to_test/5/src/: binarize.c  task.c  task.h
grading/ha-1/to_test/6/src/: binarize.c  binarize.h  task.c  task.h
grading/ha-1/to_test/7/src/: binarize.c  task.c  task.h
grading/ha-1/to_test/8/src/: binarize.c  binarize.h  task.c  task.h
grading/ha-1/to_test/9/src/: binarize.c  binarize.h  task.c  task.h
grading/ha-2/: README.md
grading/ha-2/to_test/1/: README.md
grading/ha-2/to_test/1/src/: priority_queue.c  stack.c
grading/ha-2/to_test/1/tests/: test_queue.c  test_stack.c
grading/ha-2/to_test/10/: CMakeLists.txt
grading/ha-2/to_test/10/src/: priority_queue.c  priority_queue.h  stack.c  stack.h
grading/ha-2/to_test/10/tests/: CMakeLists.txt  test_priority_queue.c  test_stack.c
grading/ha-2/to_test/11/: README.md
grading/ha-2/to_test/11/src/: priority_queue.c  stack.c  stack.h
grading/ha-2/to_test/11/tests/: CMakeLists.txt  test_queue.c  test_stack.c
grading/ha-2/to_test/12/: README.md
grading/ha-2/to_test/12/src/: priority_queue.c  priority_queue.h  stack.c  stack.h
grading/ha-2/to_test/13/: CMakeLists.txt  README.md  main.c
grading/ha-2/to_test/13/CMakeModules/: FindCheck.cmake
grading/ha-2/to_test/13/headers/: bds.h  bscds.h  node.h  pq_node.h  priority_queue.h  stack.h
grading/ha-2/to_test/13/sources/: node.c  pq_node.c  priority_queue.c  stack.c
grading/ha-2/to_test/13/tests/: CMakeLists.txt  test_priority_queue.c  test_stack.c
grading/ha-2/to_test/14/: CMakeLists.txt
grading/ha-2/to_test/14/src/: priority_queue.c  priority_queue.h  stack.c  stack.h
grading/ha-2/to_test/14/tests/: CMakeLists.txt  test_queue.c  test_stack.c
grading/ha-2/to_test/2/: CMakeLists.txt
grading/ha-2/to_test/2/CMakeModules/: FindCheck.cmake
grading/ha-2/to_test/2/src/: dll.c  dll.h  priority_queue.c  priority_queue.h  stack.c  stack.h
grading/ha-2/to_test/2/tests/: test_dll.c  test_priority_queue.c  test_stack.c
grading/ha-2/to_test/3/src/: priority_queue.c  priority_queue.h  stack.c  stack.h
grading/ha-2/to_test/3/tests/: CMakeLists.txt  test_queue.c  test_stack.c
grading/ha-2/to_test/4/: README.md
grading/ha-2/to_test/4/src/: priority_queue.c  stack.c
grading/ha-2/to_test/4/tests/: test_queue.c  test_stack.c
grading/ha-2/to_test/5/: CMakeLists.txt  README.md
grading/ha-2/to_test/5/src/: priority_queue.c  priority_queue.h  stack.c  stack.h
grading/ha-2/to_test/5/tests/: CMakeLists.txt  test_queue.c  test_stack.c
grading/ha-2/to_test/6/: CMakeLists.txt  README.md
grading/ha-2/to_test/6/src/: priority_queue.c  priority_queue.h  stack.c  stack.h
grading/ha-2/to_test/6/tests/: CMakeLists.txt  test_task.c
grading/ha-2/to_test/7/: README.md
grading/ha-2/to_test/7/CMakeModules/: FindCheck.cmake
grading/ha-2/to_test/7/src/: CMakeLists.txt  priority_queue.c  priority_queue.h  stack.c  stack.h
grading/ha-2/to_test/7/tests/: CMakeLists.txt  test_priority_queue.c  test_stack.c
grading/ha-2/to_test/8/: CMakeLists.txt
grading/ha-2/to_test/9/: CMakeLists.txt  stub
grading/ha-4/: README.md
grading/ha-4/to_test/10/: README.md
grading/ha-4/to_test/13/: CMakeLists.txt
grading/ha-4/to_test/14/: README.md
grading/ha-4/to_test/14/tests/: CMakeLists.txt  test_vector_qsort.c
grading/ha-4/to_test/2/: README.md
grading/ha-4/to_test/3/: README.md
grading/ha-4/to_test/4/: CMakeLists.txt
grading/ha-4/to_test/4/src/: vector.c  vector_int.c
grading/ha-4/to_test/4/tests/: test_vector.c  test_vector_int.c  test_vector_qsort.c
grading/ha-4/to_test/8/: README.md
grading/ha-4/to_test/9/: README.md
labs/lab-1/: README.md
labs/lab-1/cmake_first_step/: CMakeLists.txt
labs/lab-1/cmake_first_step/src/: random.c  random.h
labs/lab-1/cmake_first_step/tests/: CMakeLists.txt  test_random.c
labs/lab-1/cmake_template/: CMakeLists.txt
labs/lab-1/cmake_template/src/: binarize.h
labs/lab-1/cmake_template/tests/: CMakeLists.txt  test_binarize.c
labs/lab-1/valgrind_template/: asprintf.c  snprintf.c  snprintf_r.c  strcpy.c  strcpy_r.c
labs/lab-3/: task1.c  task2.c  task4.c
labs/lab-4/: CMakeLists.txt  README.md
labs/lab-4/src/: pointers.c  pointers.h
labs/lab-4/tests/: CMakeLists.txt  test_ipd.c  test_ips.c  test_ipu.c  test_md.c  test_pointer_validation_function.c
labs/lab-5/: README.md
(+31 files in other folders)
