cmake_minimum_required(VERSION 3.10)
project(inno_ansic_spring C)

set(CMAKE_C_STANDARD 11)

include_directories(assignments/ha-0/template)
include_directories(assignments/ha-1/template/src)
include_directories(assignments/ha-2/src)
include_directories(assignments/ha-3/src)
include_directories(assignments/ha-4/src)
include_directories(final/solutions)
include_directories(grading/ha-1/src)
include_directories(grading/ha-1/to_test/1/src)
include_directories(grading/ha-1/to_test/10/src)
include_directories(grading/ha-1/to_test/11/src)
include_directories(grading/ha-1/to_test/12/src)
include_directories(grading/ha-1/to_test/13/src)
include_directories(grading/ha-1/to_test/2/src)
include_directories(grading/ha-1/to_test/3/src)
include_directories(grading/ha-1/to_test/4/src)
include_directories(grading/ha-1/to_test/5/src)
include_directories(grading/ha-1/to_test/6/src)
include_directories(grading/ha-1/to_test/7/src)
include_directories(grading/ha-1/to_test/8/src)
include_directories(grading/ha-1/to_test/9/src)
include_directories(grading/ha-2/to_test/1/src)
include_directories(grading/ha-2/to_test/10/src)
include_directories(grading/ha-2/to_test/11/src)
include_directories(grading/ha-2/to_test/12/src)
include_directories(grading/ha-2/to_test/13/headers)
include_directories(grading/ha-2/to_test/14/src)
include_directories(grading/ha-2/to_test/2/src)
include_directories(grading/ha-2/to_test/3/src)
include_directories(grading/ha-2/to_test/4/src)
include_directories(grading/ha-2/to_test/5/src)
include_directories(grading/ha-2/to_test/6/src)
include_directories(grading/ha-2/to_test/7/src)
include_directories(grading/ha-2/to_test/8/src)
include_directories(grading/ha-2/to_test/9/src)
include_directories(grading/ha-4/to_test/1/src)
include_directories(grading/ha-4/to_test/13/src)
include_directories(grading/ha-4/to_test/14/src)
include_directories(grading/ha-4/to_test/4/src)
include_directories(grading/ha-4/to_test/6/src)
include_directories(grading/ha-4/to_test/8/src)
include_directories(grading/ha-4/to_test/9/src)
include_directories(labs/lab-1/cmake_first_step/src)
include_directories(labs/lab-1/cmake_template/src)
include_directories(labs/lab-4/src)

add_executable(inno_ansic_spring
        assignments/ha-0/template/binarize.c
        assignments/ha-0/template/binarize.h
        assignments/ha-0/template/test_binarize.c
        assignments/ha-1/template/src/binarize.c
        assignments/ha-1/template/src/binarize.h
        assignments/ha-1/template/src/task.c
        assignments/ha-1/template/src/task.h
        assignments/ha-1/template/tests/test_binarize.c
        assignments/ha-1/template/tests/test_task.c
        assignments/ha-2/src/priority_queue.c
        assignments/ha-2/src/priority_queue.h
        assignments/ha-2/src/stack.c
        assignments/ha-2/src/stack.h
        assignments/ha-2/tests/test_queue.c
        assignments/ha-2/tests/test_stack.c
        assignments/ha-3/src/bitMap.c
        assignments/ha-3/src/bitMap.h
        assignments/ha-3/tests/test_bitMap.c
        assignments/ha-4/src/vector.c
        assignments/ha-4/src/vector.h
        assignments/ha-4/src/vector_int.c
        assignments/ha-4/src/vector_int.h
        assignments/ha-4/tests/test_vector.c
        assignments/ha-4/tests/test_vector_int.c
        assignments/ha-4/tests/test_vector_qsort.c
        final/preparation/task0.c
        final/preparation/task1.c
        final/preparation/task2.c
        final/preparation/task3.c
        final/solutions/task1.c
        final/solutions/task1.h
        final/solutions/task2.c
        final/solutions/task3.c
        grading/ha-1/src/binarize.c
        grading/ha-1/src/binarize.h
        grading/ha-1/src/task.c
        grading/ha-1/src/task.h
        grading/ha-1/tests/test_binarize.c
        grading/ha-1/tests/test_task.c
        grading/ha-1/to_test/1/src/atofe.c
        grading/ha-1/to_test/1/src/binarize.c
        grading/ha-1/to_test/1/src/binarize.h
        grading/ha-1/to_test/1/src/binsearch.c
        grading/ha-1/to_test/1/src/detab.c
        grading/ha-1/to_test/1/src/entab.c
        grading/ha-1/to_test/1/src/escape.c
        grading/ha-1/to_test/1/src/expand.c
        grading/ha-1/to_test/1/src/flush.c
        grading/ha-1/to_test/1/src/htoi.c
        grading/ha-1/to_test/1/src/itob.c
        grading/ha-1/to_test/1/src/strrindex.c
        grading/ha-1/to_test/1/src/task.c
        grading/ha-1/to_test/1/src/task.h
        grading/ha-1/to_test/10/src/binarize.c
        grading/ha-1/to_test/10/src/binarize.h
        grading/ha-1/to_test/10/src/task.c
        grading/ha-1/to_test/10/src/task.h
        grading/ha-1/to_test/11/src/binarize.c
        grading/ha-1/to_test/11/src/binarize.h
        grading/ha-1/to_test/11/src/task.c
        grading/ha-1/to_test/11/src/task.h
        grading/ha-1/to_test/12/src/binarize.c
        grading/ha-1/to_test/12/src/binarize.h
        grading/ha-1/to_test/12/src/task.c
        grading/ha-1/to_test/12/src/task.h
        grading/ha-1/to_test/13/src/task.c
        grading/ha-1/to_test/13/src/task.h
        grading/ha-1/to_test/2/src/binarize.c
        grading/ha-1/to_test/2/src/binarize.h
        grading/ha-1/to_test/2/src/task.c
        grading/ha-1/to_test/2/src/task.h
        grading/ha-1/to_test/3/src/binarize.c
        grading/ha-1/to_test/3/src/binarize.h
        grading/ha-1/to_test/3/src/task.c
        grading/ha-1/to_test/3/src/task.h
        grading/ha-1/to_test/4/src/binarize.c
        grading/ha-1/to_test/4/src/binarize.h
        grading/ha-1/to_test/4/src/task.c
        grading/ha-1/to_test/4/src/task.h
        grading/ha-1/to_test/5/src/binarize.c
        grading/ha-1/to_test/5/src/binarize.h
        grading/ha-1/to_test/5/src/task.c
        grading/ha-1/to_test/5/src/task.h
        grading/ha-1/to_test/6/src/binarize.c
        grading/ha-1/to_test/6/src/binarize.h
        grading/ha-1/to_test/6/src/task.c
        grading/ha-1/to_test/6/src/task.h
        grading/ha-1/to_test/7/src/binarize.c
        grading/ha-1/to_test/7/src/binarize.h
        grading/ha-1/to_test/7/src/task.c
        grading/ha-1/to_test/7/src/task.h
        grading/ha-1/to_test/8/src/binarize.c
        grading/ha-1/to_test/8/src/binarize.h
        grading/ha-1/to_test/8/src/task.c
        grading/ha-1/to_test/8/src/task.h
        grading/ha-1/to_test/9/src/binarize.c
        grading/ha-1/to_test/9/src/binarize.h
        grading/ha-1/to_test/9/src/task.c
        grading/ha-1/to_test/9/src/task.h
        grading/ha-2/to_test/1/src/priority_queue.c
        grading/ha-2/to_test/1/src/priority_queue.h
        grading/ha-2/to_test/1/src/stack.c
        grading/ha-2/to_test/1/src/stack.h
        grading/ha-2/to_test/10/src/priority_queue.c
        grading/ha-2/to_test/10/src/priority_queue.h
        grading/ha-2/to_test/10/src/stack.c
        grading/ha-2/to_test/10/src/stack.h
        grading/ha-2/to_test/11/src/priority_queue.c
        grading/ha-2/to_test/11/src/priority_queue.h
        grading/ha-2/to_test/11/src/stack.c
        grading/ha-2/to_test/11/src/stack.h
        grading/ha-2/to_test/12/src/priority_queue.c
        grading/ha-2/to_test/12/src/priority_queue.h
        grading/ha-2/to_test/12/src/stack.c
        grading/ha-2/to_test/12/src/stack.h
        grading/ha-2/to_test/13/headers/bds.h
        grading/ha-2/to_test/13/headers/bscds.h
        grading/ha-2/to_test/13/headers/node.h
        grading/ha-2/to_test/13/headers/pq_node.h
        grading/ha-2/to_test/13/headers/priority_queue.h
        grading/ha-2/to_test/13/headers/stack.h
        grading/ha-2/to_test/13/sources/node.c
        grading/ha-2/to_test/13/sources/pq_node.c
        grading/ha-2/to_test/13/sources/priority_queue.c
        grading/ha-2/to_test/13/sources/stack.c
        grading/ha-2/to_test/13/main.c
        grading/ha-2/to_test/14/src/priority_queue.c
        grading/ha-2/to_test/14/src/priority_queue.h
        grading/ha-2/to_test/14/src/stack.c
        grading/ha-2/to_test/14/src/stack.h
        grading/ha-2/to_test/2/src/dll.c
        grading/ha-2/to_test/2/src/dll.h
        grading/ha-2/to_test/2/src/priority_queue.c
        grading/ha-2/to_test/2/src/priority_queue.h
        grading/ha-2/to_test/2/src/stack.c
        grading/ha-2/to_test/2/src/stack.h
        grading/ha-2/to_test/3/src/priority_queue.c
        grading/ha-2/to_test/3/src/priority_queue.h
        grading/ha-2/to_test/3/src/stack.c
        grading/ha-2/to_test/3/src/stack.h
        grading/ha-2/to_test/4/src/priority_queue.c
        grading/ha-2/to_test/4/src/priority_queue.h
        grading/ha-2/to_test/4/src/stack.c
        grading/ha-2/to_test/4/src/stack.h
        grading/ha-2/to_test/5/src/priority_queue.c
        grading/ha-2/to_test/5/src/priority_queue.h
        grading/ha-2/to_test/5/src/stack.c
        grading/ha-2/to_test/5/src/stack.h
        grading/ha-2/to_test/6/src/priority_queue.c
        grading/ha-2/to_test/6/src/priority_queue.h
        grading/ha-2/to_test/6/src/stack.c
        grading/ha-2/to_test/6/src/stack.h
        grading/ha-2/to_test/7/src/priority_queue.c
        grading/ha-2/to_test/7/src/priority_queue.h
        grading/ha-2/to_test/7/src/stack.c
        grading/ha-2/to_test/7/src/stack.h
        grading/ha-2/to_test/8/src/priority_queue.c
        grading/ha-2/to_test/8/src/priority_queue.h
        grading/ha-2/to_test/8/src/stack.c
        grading/ha-2/to_test/8/src/stack.h
        grading/ha-2/to_test/9/src/priority_queue.c
        grading/ha-2/to_test/9/src/priority_queue.h
        grading/ha-2/to_test/9/src/stack.c
        grading/ha-2/to_test/9/src/stack.h
        grading/ha-4/to_test/1/src/vector.c
        grading/ha-4/to_test/1/src/vector.h
        grading/ha-4/to_test/1/src/vector_int.c
        grading/ha-4/to_test/1/src/vector_int.h
        grading/ha-4/to_test/1/tests/test_vector.c
        grading/ha-4/to_test/1/tests/test_vector_int.c
        grading/ha-4/to_test/1/tests/test_vector_qsort.c
        grading/ha-4/to_test/13/src/vector.c
        grading/ha-4/to_test/13/src/vector.h
        grading/ha-4/to_test/13/src/vector_int.c
        grading/ha-4/to_test/13/src/vector_int.h
        grading/ha-4/to_test/13/tests/test_vector.c
        grading/ha-4/to_test/13/tests/test_vector_int.c
        grading/ha-4/to_test/13/tests/test_vector_qsort.c
        grading/ha-4/to_test/13/main.c
        grading/ha-4/to_test/14/src/vector.c
        grading/ha-4/to_test/14/src/vector.h
        grading/ha-4/to_test/14/src/vector_int.c
        grading/ha-4/to_test/14/src/vector_int.h
        grading/ha-4/to_test/14/tests/test_vector.c
        grading/ha-4/to_test/14/tests/test_vector_int.c
        grading/ha-4/to_test/14/tests/test_vector_qsort.c
        grading/ha-4/to_test/4/src/vector.c
        grading/ha-4/to_test/4/src/vector.h
        grading/ha-4/to_test/4/src/vector_int.c
        grading/ha-4/to_test/4/src/vector_int.h
        grading/ha-4/to_test/4/tests/test_vector.c
        grading/ha-4/to_test/4/tests/test_vector_int.c
        grading/ha-4/to_test/4/tests/test_vector_qsort.c
        grading/ha-4/to_test/6/src/vector.c
        grading/ha-4/to_test/6/src/vector.h
        grading/ha-4/to_test/6/src/vector_int.c
        grading/ha-4/to_test/6/src/vector_int.h
        grading/ha-4/to_test/6/tests/test_vector.c
        grading/ha-4/to_test/6/tests/test_vector_int.c
        grading/ha-4/to_test/6/tests/test_vector_qsort.c
        grading/ha-4/to_test/8/src/vector.c
        grading/ha-4/to_test/8/src/vector.h
        grading/ha-4/to_test/8/src/vector_int.c
        grading/ha-4/to_test/8/src/vector_int.h
        grading/ha-4/to_test/8/tests/test_vector.c
        grading/ha-4/to_test/8/tests/test_vector_int.c
        grading/ha-4/to_test/8/tests/test_vector_qsort.c
        grading/ha-4/to_test/9/src/vector.c
        grading/ha-4/to_test/9/src/vector.h
        grading/ha-4/to_test/9/src/vector_int.c
        grading/ha-4/to_test/9/src/vector_int.h
        grading/ha-4/to_test/9/tests/test_vector.c
        grading/ha-4/to_test/9/tests/test_vector_int.c
        grading/ha-4/to_test/9/tests/test_vector_qsort.c
        labs/lab-1/cmake_first_step/src/random.c
        labs/lab-1/cmake_first_step/src/random.h
        labs/lab-1/cmake_first_step/tests/test_random.c
        labs/lab-1/cmake_template/src/binarize.c
        labs/lab-1/cmake_template/src/binarize.h
        labs/lab-1/cmake_template/tests/test_binarize.c
        labs/lab-1/valgrind_template/asprintf.c
        labs/lab-1/valgrind_template/snprintf.c
        labs/lab-1/valgrind_template/snprintf_r.c
        labs/lab-1/valgrind_template/strcpy.c
        labs/lab-1/valgrind_template/strcpy_r.c
        labs/lab-3/task1.c
        labs/lab-3/task2.c
        labs/lab-3/task3.c
        labs/lab-3/task4.c
        labs/lab-4/src/pointers.c
        labs/lab-4/src/pointers.h
        labs/lab-4/src/vector.c
        labs/lab-4/src/vector.h
        labs/lab-4/src/vector_int.c
        labs/lab-4/src/vector_int.h
        labs/lab-4/tests/test_ipd.c
        labs/lab-4/tests/test_ips.c
        labs/lab-4/tests/test_ipu.c
        labs/lab-4/tests/test_md.c
        labs/lab-4/tests/test_pointer_validation_function.c)
